# svFSI

./: .gitignore  CMakeLists.txt  Copyright-SimVascular.txt  INSTALL-DEPS.md  INSTALL.md  README.md  Readme.md  git_test  paper.bib  paper.md  svFSI.inp  svFSI_master.inp
BuildWithMake/: Makefile  README-build-linux.txt  README-build-macosx.txt  README-build-windows.txt  get-vtk-binaries.sh  include.mk
BuildWithMake/MakeHelpers/: compiler.ifort.x64_cygwin.mk  mpich.x64_macosx.mk  rules.x64_cygwin.mk  rules.x64_linux.mk  rules.x64_macosx.mk  vtk-6.2.0.x64_cygwin.mk  vtk-6.2.0.x64_linux.mk  vtk-6.2.0.x64_macosx.mk
BuildWithMake/Release/: Makefile
BuildWithMake/Release/developer_wrapper_scripts/: developer-core-script  developer-svpost-script  developer-svpre-script  developer-svsolver-mpi-linux-script  developer-svsolver-mpi-macosx-script  developer-svsolver-mpi-windows-script  developer-svsolver-nompi-linux-script  developer-svsolver-nompi-macosx-script  developer-svsolver-nompi-windows-script
BuildWithMake/Release/platform_independent_scripts/: generic-launch-script  post-svsolver-install.sh
BuildWithMake/Release/windows_installer_packages/: wix-simvascular-svsolver-bundle.wxs
BuildWithMake/Release/windows_msi_helpers/: makewxs-svsolver.tcl
BuildWithMake/Release/windows_wrapper_scripts/: windows-dist-core-script  windows-dist-svpost-script  windows-dist-svpre-script  windows-dist-svsolver-mpi-script  windows-dist-svsolver-nompi-script
BuildWithMake/SampleOverrides/centos_6/: global_overrides.mk
BuildWithMake/SampleOverrides/macosx_11/: global_overrides.mk
BuildWithMake/SampleOverrides/ubuntu_14/: global_overrides.mk
BuildWithMake/SampleOverrides/windows/: global_overrides.mk
Code/: CMakeLists.txt
Code/CMake/: FindMPI.cmake  SVFSILSConfig.cmake  SimVascularDependentOptions.cmake  SimVascularExternals.cmake  SimVascularFunctions.cmake  SimVascularInstallLibs.cmake  SimVascularInstallSetup.cmake  SimVascularInternals.cmake  SimVascularMacros.cmake  SimVascularOptions.cmake  SimVascularSystemSetup.cmake  SimVascularThirdParty.cmake
Code/FlowSolvers/: CMakeLists.txt
Code/FlowSolvers/Include/: CMakeLists.txt  SimVascular.h
Code/FlowSolvers/ThreeDSolver/: CMakeLists.txt
Code/FlowSolvers/ThreeDSolver/SolverIO/: CMakeLists.txt  cvSolverIO.cxx  cvSolverIO.h
Code/FlowSolvers/ThreeDSolver/dummyMPI/: CMakeLists.txt
Code/FlowSolvers/ThreeDSolver/svFSI/: BBO.f  CHNL.f  CMakeLists.txt  COMU.f  CONSTRUCT.f  FLUID.f  LELAS.f  LOADMSH.f  MATFUN.f  REMESH.f  SPLIT.c  STRUCT.f  TXT.f  VTK_OLD.f  trilinos_linear_solver.cpp  vtkLegacyParser.f90  vtkTypeParams.f90  vtkXMLParser.f90  vtkZpipe.c
Code/FlowSolvers/ThreeDSolver/svFSILS/: BICGS.f  CGRAD.f  CMakeLists.txt  CPUT.f  FSILS.h  FSILS_STD.h  FSILS_STRUCT.h  FSILS_struct_c.h  FSISOLVER.f  GE.f  INCOMMU.f  LHS.f  LS.f  OMPLA.f  PCGMRES.f  SOLVE.f  SPARMUL.f
Code/FlowSolvers/ThreeDSolver/svLS/: CMakeLists.txt
Code/FlowSolvers/ThreeDSolver/svPost/: CMakeLists.txt  Makefile  post_solver.cxx
Code/FlowSolvers/ThreeDSolver/svPre/: CMakeLists.txt  Makefile  helpers.cxx
Code/FlowSolvers/ThreeDSolver/svSolver/: CMakeLists.txt  Makefile
Code/Scripts/: CMakeLists.txt  SimVascularScriptMacros.cmake
Code/Scripts/executable/developer/: svFSI-linux.in  svpost-linux.in  svsolver-nompi-linux.in  svsolver-nompi-windows.in
Code/Scripts/executable/install/: svFSI-linux.in  svsolver-nompi-linux.in  svsolver-nompi-windows.in
Code/Source/: CMakeLists.txt
Code/Source/Include/: CMakeLists.txt
Code/Source/svFSI/: ALLFUN.f  BAFINI.f  BBO.f  BF.f  CEP.f  CEPION.f  CEPMOD.f  CEPMOD_AP.f  CEPMOD_BO.f  CEPMOD_FN.f  CEPMOD_TTP.f  CHNL.f  CMM.f  CMakeLists.txt  COMU.f  CONSTRUCT.f  CONSTS.f  CONTACT.f  DEBUG.f  DELAU2D.f  DISTRIBUTE.f  ECMOD_DCPLD.f  EC_DCPLD.f  EQASSEM.f  FC.f  FFT.f  FIBERS.f  FLUID.f  FS.f  FSI.f  HEAT.f  HEATF.f  HEATS.f  HYPRE_SOLVE.f  IB.f  INITIALIZE.f  LELAS.f  LHSA.f  LIST.f  LOADMSH.f  (+41 more)
Code/Source/svFSILS/: ADDBCMUL.f  BC.f  BCAST.f  BICGS.f  CGRAD.f  CMakeLists.txt  COMMU.f  CPUT.f  DOT.f  FSILS.h  FSILS_API.h  FSILS_STD.h  FSILS_STRUCT.h  FSILS_TYPEDEF.h  FSILS_api_c.h  FSILS_c.h  FSISOLVER.f  GE.f  GMRES.f  HRCPUT.c  INCOMMU.f  LHS.f  LS.f  NORM.f  NSSOLVER.f  OMPLA.f  PCGMRES.f  PRECOND.f  SOLVE.f  SPARMUL.f
Distribution/: CMakeLists.txt  license.txt
Docker/: Dockerfile  README.md
travis/: travis_build.sh  travis_cmake_config.sh
